--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@ body {
     font-family: 'catamaran';
 }
 
+#display {
+    height: 32px;
+    font-size: 32px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
